--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "@transcend-io/airgap.js-types",
   "description": "TypeScript types for airgap.js interoperability with custom consent UIs",
   "version": "6.5.0",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "main": "src/index",
   "type": "module",
   "scripts": {
