Add private: false to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "@transcend-io/airgap.js-types",
   "description": "TypeScript types for airgap.js interoperability with custom consent UIs",
   "version": "6.5.0",
+  "private": false,
   "license": "MIT",
   "main": "src/index",
   "type": "module",
