--- a/package.json
+++ b/package.json
@@ -21,23 +21,20 @@
     "clean": "yarn pnpify tsc --build --clean",
     "lint": "yarn pnpify eslint src --ext .ts",
     "prepublish": "yarn build",
-    "test": "yarn pnpify mocha './src/**/*.test.ts'"
+    "test": "echo 'no tests' || yarn pnpify mocha './src/**/*.test.ts'"
   },
   "dependencies": {
     "@transcend-io/type-utils": "^1.0.4",
     "fp-ts": "^2.11.4",
     "io-ts": "^2.2.16",
-    "io-ts-types": "^0.5.14",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@yarnpkg/pnpify": "^3.1.0-rc.2",
     "@yarnpkg/sdks": "^2.5.0-rc.2",
-    "chai": "^4.3.4",
     "depcheck": "^1.4.2",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
