--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Transcend Inc.",
   "name": "@transcend-io/airgap.js-types",
-  "description": "TypeScript types for airgap.js interoperability with custom consent UIs",
-  "version": "6.8.1",
+  "description": "Small package containing useful typescript utilities.",
+  "version": "6.8.2",
   "homepage": "https://github.com/transcend-io/airgap.js-types",
   "repository": {
     "type": "git",
@@ -21,19 +21,20 @@
     "clean": "yarn pnpify tsc --build --clean",
     "lint": "yarn pnpify eslint src --ext .ts",
     "prepublish": "yarn build",
-    "test": "echo 'no tests'"
+    "test": "yarn pnpify mocha './src/**/*.test.ts'"
   },
   "dependencies": {
-    "@transcend-io/type-utils": "^1.0.4",
-    "fp-ts": "^2.11.4",
-    "io-ts": "^2.2.16",
-    "tslib": "^2.3.0"
+    "fp-ts": "^2.11.5",
+    "io-ts": "^2.2.16"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@yarnpkg/pnpify": "^3.1.0-rc.2",
     "@yarnpkg/sdks": "^2.5.0-rc.2",
+    "chai": "^4.3.4",
     "depcheck": "^1.4.2",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -41,6 +42,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsdoc": "^36.1.1",
+    "mocha": "^8.2.1",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
