--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "incremental": true,
     "target": "es2019",
     "module": "commonjs",
-    "lib": ["esnext", "dom"],
+    "lib": ["esnext", "es2020", "es2019", "dom"],
     "allowJs": false,
     "checkJs": false, // speeds up webpack and tsc
     "declaration": true,
@@ -29,7 +29,8 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "build",
     "tsBuildInfoFile": "./build/tsbuildinfo",
-    "rootDir": "src"
+    "rootDir": "src",
+    "types": ["mocha"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "build"],
