--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "build": "yarn pnpify tsc --build",
     "clean": "yarn pnpify tsc --build --clean",
     "lint": "yarn pnpify eslint src --ext .ts",
-    "prepublish": "yarn build",
-    "test": "yarn pnpify mocha './src/**/*.test.ts'"
+    "prepublish": "yarn build"
   },
   "dependencies": {
     "@transcend-io/type-utils": "^1.0.4",
@@ -30,7 +29,6 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.13",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
@@ -44,10 +42,9 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsdoc": "^36.1.1",
-    "mocha": "^8.2.1",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   },
   "packageManager": "yarn@sources"
 }
