--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
-  "packageManager": "yarn@sources"
+  "packageManager": "yarn@3.2.0-rc.8"
 }
