--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
-  "packageManager": "yarn@sources"
+  "packageManager": "yarn@3.1.1"
 }
