--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@transcend-io/internationalization": "^1.4.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@yarnpkg/pnpify": "^3.1.1",
