--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@transcend-io/internationalization": "^1.4.1",
+    "@transcend-io/privacy-types": "^4.23.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@yarnpkg/pnpify": "^3.1.1",
