--- a/package.json
+++ b/package.json
@@ -18,34 +18,34 @@
   "scripts": {
     "update:sdks": "yarn set version from sources && yarn sdks base",
     "update:deps": "yarn upgrade-interactive && yarn update:sdks",
-    "build": "yarn pnpify tsc --build && yarn pnpify tsc --module es2022 --outDir build-esm",
-    "clean": "yarn pnpify tsc --build --clean && rm -rf build && rm -rf build-esm",
-    "lint": "yarn pnpify eslint src --ext .ts",
+    "build": "yarn tsc --build && yarn tsc --module es2022 --outDir build-esm",
+    "clean": "yarn tsc --build --clean && rm -rf build && rm -rf build-esm",
+    "lint": "yarn eslint src --ext .ts",
     "prepublish": "yarn build",
     "test": "echo 'no tests'"
   },
   "dependencies": {
-    "@transcend-io/type-utils": "^1.0.5",
-    "fp-ts": "^2.11.8",
-    "io-ts": "^2.2.16"
+    "@transcend-io/type-utils": "^1.2.0",
+    "fp-ts": "^2.16.1",
+    "io-ts": "^2.2.21"
   },
   "devDependencies": {
-    "@transcend-io/internationalization": "^1.4.1",
-    "@transcend-io/privacy-types": "^4.23.1",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "@yarnpkg/pnpify": "^3.1.1",
-    "@yarnpkg/sdks": "^2.6.0",
-    "depcheck": "^1.4.3",
-    "eslint": "^8.10.0",
+    "@transcend-io/internationalization": "^1.6.0",
+    "@transcend-io/privacy-types": "^4.58.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "@yarnpkg/pnpify": "^4.0.1",
+    "@yarnpkg/sdks": "^3.1.0",
+    "depcheck": "^1.4.7",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsdoc": "^37.9.4",
-    "prettier": "^2.5.1",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-jsdoc": "^46.9.0",
+    "prettier": "^3.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@4.0.2"
 }
