--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
           node-version: 20.x
       - run: yarn
       - uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --verbose
 
   build-to-npm:
     if: github.ref == 'refs/heads/main'
