--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
       - id: check-symlinks
       - id: check-case-conflict
       - id: check-executables-have-shebangs
-        exclude: (.pnp.cjs)
+        exclude: \.pnp\.cjs$
       - id: check-added-large-files
         exclude: (yarn.lock|.yarn/|.pnp.cjs)
       - id: check-json
