--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,12 @@ repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
     # Use the sha / tag you want to point at, this needs
     # to stay in sync with the package.json version
-    rev: 'v2.3.2'
+    rev: v3.1.0
     hooks:
       - id: prettier
         args: [--write, --list-different]
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
+    rev: v4.5.0
     hooks:
       - id: check-merge-conflict
       - id: check-symlinks
@@ -31,5 +31,5 @@ repos:
         description: 'Run static code linting'
         entry: yarn lint --fix
         language: node
-        files: \.[jt]sx?$ # *.js, *.jsx, *.ts and *.tsx
+        files: .*\.(js|jsx|ts|tsx)$
         types: [file]
