--- a/.github/workflows/npm_deprecate.yml
+++ b/.github/workflows/npm_deprecate.yml
@@ -27,4 +27,4 @@ jobs:
           yarn config set npmAuthToken ${{ secrets.NPM_TOKEN }}
       - run: |
           PACKAGE_NAME=$(node -p "require('./package.json').name")
-          yarn npm deprecate "${PACKAGE_NAME}@${{ inputs.version }}" "${{ inputs.message }}"
+          yarn exec npm deprecate "${PACKAGE_NAME}@${{ inputs.version }}" "${{ inputs.message }}"
