--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3.1.1
         with:
-          node-version: "22.19.0"
+          node-version: '22.19.0'
       - run: yarn
       - name: Build the typescript code
         run: yarn build
@@ -70,7 +70,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "22.x"
+          node-version: '22.x'
       - run: yarn
       - name: Configure NPM authentication
         run: |
@@ -92,7 +92,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "22.x"
+          node-version: '22.x'
       - run: yarn
       - name: Configure Github Packages authentication
         run: |
