--- a/.github/workflows/npm_deprecate.yml
+++ b/.github/workflows/npm_deprecate.yml
@@ -21,10 +21,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '20.x'
-      - run: |
-          yarn config set npmAlwaysAuth true
-          yarn config set npmAuthToken ${{ secrets.NPM_TOKEN }}
+          node-version: '22.x'
+          registry-url: 'https://registry.npmjs.org'
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: |
           PACKAGE_NAME=$(node -p "require('./package.json').name")
           yarn exec npm deprecate "${PACKAGE_NAME}@${{ inputs.version }}" "${{ inputs.message }}"
